<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.jordi-rocafort.tle_decoder</groupId>
	<artifactId>TLE-Decoder</artifactId>
	<packaging>jar</packaging>
	<version>1.2</version>
	<name>TLE-Decoder</name>
	<url>https://github.com/Jordi-R66/TLE-Decoder-GUI</url>

	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<repository>
			<id>jogamp</id>
			<url>https://jogamp.org/deployment/maven/</url>
		</repository>
		<repository>
			<id>jogamp-java3d</id>
			<url>https://jogamp.org/deployment/maven-java3d</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.jogamp.jogl</groupId>
			<artifactId>jogl-all-main</artifactId>
			<version>2.6.0</version>
		</dependency>
		<dependency>
			<groupId>org.jogamp.gluegen</groupId>
			<artifactId>gluegen-rt-main</artifactId>
			<version>2.6.0</version>
		</dependency>

		<dependency>
			<groupId>org.jogamp.java3d</groupId>
			<artifactId>java3d-core</artifactId>
			<version>1.7.2</version>
		</dependency>
		<dependency>
			<groupId>org.jogamp.java3d</groupId>
			<artifactId>java3d-utils</artifactId>
			<version>1.7.2</version>
		</dependency>

		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf</artifactId>
			<version>3.6</version>
		</dependency>
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf-extras</artifactId>
			<version>3.6</version>
		</dependency>

		<dependency>
			<groupId>com.github.Dansoftowner</groupId>
			<artifactId>jSystemThemeDetector</artifactId>
			<version>3.6</version>
		</dependency>

		<dependency>
			<groupId>org.drjekyll</groupId>
			<artifactId>colorpicker</artifactId>
			<version>2.0.1</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>2.0.17</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.5.2</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>fr.jordi_rocafort.tle_decoder.Main</mainClass>
								</transformer>
							</transformers>
							<createDependencyReducedPom>false</createDependencyReducedPom>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
			    <groupId>com.akathist.maven.plugins.launch4j</groupId>
			    <artifactId>launch4j-maven-plugin</artifactId>
			    <version>2.5.3</version>
			    <executions>
			        <execution>
			            <id>l4j-clui</id>
			            <phase>package</phase>
			            <goals>
			                <goal>launch4j</goal>
			            </goals>
			            <configuration>
			                <headerType>gui</headerType>
			                <jar>${project.build.directory}/${project.build.finalName}.jar</jar>
			                <outfile>${project.build.directory}/TLE-Decoder.exe</outfile>
			                <downloadUrl>https://java.com/download</downloadUrl>
			                <classPath>
			                    <mainClass>fr.jordi_rocafort.tle_decoder.Main</mainClass>
			                    <preCp>anything</preCp>
			                </classPath>
			                <jre>
			                    <path>%JAVA_HOME%;%PATH%</path>
			                    <bundledJre64Bit>true</bundledJre64Bit>
			                    <opts>
			                        <opt>--enable-native-access=ALL-UNNAMED</opt>
			                        <opt>--add-opens=java.desktop/sun.awt=ALL-UNNAMED</opt>
			                    </opts>
			                </jre>
			                <versionInfo>
			                    <fileVersion>1.2.0.0</fileVersion>
			                    <txtFileVersion>1.2</txtFileVersion>
			                    <fileDescription>TLE Decoder GUI</fileDescription>
			                    <copyright>Jordi Rocafort</copyright>
			                    <productVersion>1.2.0.0</productVersion>
			                    <txtProductVersion>1.2</txtProductVersion>
			                    <productName>TLE-Decoder</productName>
			                    <internalName>TLE-Decoder</internalName>
			                    <originalFilename>TLE-Decoder.exe</originalFilename>
			                </versionInfo>
			            </configuration>
			        </execution>
			    </executions>
			</plugin>
		</plugins>
	</build>
</project>
